data/raw/run-31498698802/sandbox/firewall/audit/iptables-audit.txt
# iptables audit dump - 2026-08-11T14:02:21Z

## IPv4 NAT rules
# Generated by iptables-save v1.8.7 on Tue Aug 11 14:02:21 2026
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [1:66]
:POSTROUTING ACCEPT [2:132]
:DOCKER_OUTPUT - [0:0]
:DOCKER_POSTROUTING - [0:0]
-A OUTPUT -d 127.0.0.11/32 -j DOCKER_OUTPUT
-A OUTPUT -o lo -j RETURN
-A OUTPUT -d 127.0.0.0/8 -j RETURN
-A OUTPUT -d 0.0.0.0/32 -j RETURN
-A OUTPUT -d 168.63.129.16/32 -p udp -m udp --dport 53 -j RETURN
-A OUTPUT -d 168.63.129.16/32 -p tcp -m tcp --dport 53 -j RETURN
-A OUTPUT -d 127.0.0.11/32 -p udp -m udp --dport 53 -j RETURN
-A OUTPUT -d 127.0.0.11/32 -p tcp -m tcp --dport 53 -j RETURN
-A OUTPUT -d 172.30.0.10/32 -j RETURN
-A OUTPUT -d 172.30.0.30/32 -j RETURN
-A OUTPUT -d 172.17.0.1/32 -j RETURN
-A OUTPUT -d 172.30.0.1/32 -j RETURN
-A OUTPUT -p tcp -m tcp --dport 22 -j RETURN
-A OUTPUT -p tcp -m tcp --dport 23 -j RETURN
-A OUTPUT -p tcp -m tcp --dport 25 -j RETURN
-A OUTPUT -p tcp -m tcp --dport 110 -j RETURN
-A OUTPUT -p tcp -m tcp --dport 143 -j RETURN
-A OUTPUT -p tcp -m tcp --dport 445 -j RETURN
-A OUTPUT -p tcp -m tcp --dport 1433 -j RETURN
-A OUTPUT -p tcp -m tcp --dport 1521 -j RETURN
-A OUTPUT -p tcp -m tcp --dport 3306 -j RETURN
-A OUTPUT -p tcp -m tcp --dport 3389 -j RETURN
-A OUTPUT -p tcp -m tcp --dport 5432 -j RETURN
-A OUTPUT -p tcp -m tcp --dport 6379 -j RETURN
-A OUTPUT -p tcp -m tcp --dport 27017 -j RETURN
-A OUTPUT -p tcp -m tcp --dport 27018 -j RETURN
-A OUTPUT -p tcp -m tcp --dport 28017 -j RETURN
-A OUTPUT -p tcp -m tcp --dport 80 -j DNAT --to-destination 172.30.0.10:3128
-A OUTPUT -p tcp -m tcp --dport 443 -j DNAT --to-destination 172.30.0.10:3128
-A OUTPUT -p tcp -m tcp --dport 80 -j DNAT --to-destination 172.30.0.10:3128
-A OUTPUT -p tcp -m tcp --dport 443 -j DNAT --to-destination 172.30.0.10:3128
-A OUTPUT -p tcp -m tcp --dport 8080 -j DNAT --to-destination 172.30.0.10:3128
-A POSTROUTING -d 127.0.0.11/32 -j DOCKER_POSTROUTING
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p tcp -j DNAT --to-destination 127.0.0.11:39847
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p udp -j DNAT --to-destination 127.0.0.11:60976
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p tcp -j SNAT --to-source :53
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p udp -j SNAT --to-source :53
COMMIT
# Completed on Tue Aug 11 14:02:21 2026

## IPv4 filter rules
# Generated by iptables-save v1.8.7 on Tue Aug 11 14:02:21 2026
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A OUTPUT -d 172.17.0.1/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -d 172.17.0.1/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -d 172.17.0.1/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -d 172.17.0.1/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -d 172.17.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -d 172.30.0.1/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -d 172.30.0.1/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -d 172.30.0.1/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -d 172.30.0.1/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -d 172.30.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -d 168.63.129.16/32 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -d 168.63.129.16/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -d 127.0.0.11/32 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -d 127.0.0.11/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -d 172.30.0.10/32 -p tcp -j ACCEPT
-A OUTPUT -d 172.30.0.30/32 -p tcp -j ACCEPT
-A OUTPUT -p tcp -m multiport --dports 22,23,25,110,143,445,1433,1521,3306,3389,5432,6379,27017,27018,28017 -m limit --limit 5/min --limit-burst 10 -j LOG --log-prefix "[FW_BLOCKED_DANGEROUS_PORT] " --log-uid
-A OUTPUT -p tcp -m limit --limit 10/min --limit-burst 20 -j LOG --log-prefix "[FW_BLOCKED_TCP] " --log-uid
-A OUTPUT -p tcp -j DROP
-A OUTPUT -p udp -m limit --limit 10/min --limit-burst 20 -j LOG --log-prefix "[FW_BLOCKED_UDP_AGENT] " --log-uid
-A OUTPUT -p udp -j DROP
COMMIT
# Completed on Tue Aug 11 14:02:21 2026

## IPv6 NAT rules
# Generated by ip6tables-save v1.8.7 on Tue Aug 11 14:02:21 2026
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A OUTPUT -o lo -j RETURN
-A OUTPUT -d ::1/128 -j RETURN
COMMIT
# Completed on Tue Aug 11 14:02:21 2026

## IPv6 filter rules
# Generated by ip6tables-save v1.8.7 on Tue Aug 11 14:02:21 2026
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Tue Aug 11 14:02:21 2026
